# github-as-market-device

./: .gitignore  CITATION.cff  InputOutput Overview.txt  LICENSE  README.md  github_terminology.txt  main.tex  pyproject.toml  requirements.txt  test.ipynb  to-do.txt
GithubAppMarket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
GithubAsMarketDevice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
appendix/: APPENDIX.md  APPENDIX.tex  appendix_a_collaboration_inter_company_category_summary.md  appendix_b_attention_inter_company_category_summary.md
appendix/appendix_files/: 01_methods_extended.md  01_methods_extended.tex  attention_1_edges_summary.tex  attention_1_summary_data_rows.tex  attention_2_adjacency_inter_data_rows.tex  attention_2_adjacency_intra_data_rows.tex  attention_2_adjacency_matrix_inter.tex  attention_3_adjacency_intra_data_rows.tex  (+11 more)
github_market/: 1. Collecting first-tier users.ipynb  2. Sorting first-tier users.ipynb  3. Collecting second-tier users.ipynb  4. Sorting second-tier users.ipynb  5. Visualizing network.ipynb  6. Exploring network connection in-depth.ipynb  6. Exploring the data.ipynb  7. Descriptive data.ipynb  8. Constructing appendix.ipynb  resolved_multicompany_cases.jsonl
notebooks/: 1. Collecting first-tier users.ipynb  2. Creating first-tier dataset.ipynb  3. Scraping second-tier users.ipynb  4. Repeating first-tier and second-tier collection.ipynb  5. Cleaning second-tier and first-tier userdata.ipynb  6. Visualizing network.ipynb  7. Exploring network connection in-depth.ipynb  8. Descriptive data.ipynb
output/: all_edges_user_level.gzip.parquet  attention_edges_user_level.gzip.parquet  collaboration_edges_user_level.gzip.parquet  company_category_map.jsonl  company_scrapelog.jsonl  initial_list.csv  resolved_multicompany_cases.jsonl  second_tier_companies.csv  second_tier_users_filtered_subset.csv
resources/: appendix_table_functions.py  appendix_table_metadata.py  config.ini  filter_functions.py  generate_appendix.py  github_functions.py  latex_settings.tex  network_functions.py  regex_company_patterns.py  resolved_multicompany_cases.jsonl
