[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GithubAppMarket"
version = "0.1.0"
description = "Codebase for the paper 'Github As A Market Device'"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Eva Iris Otto (University of Copenhagen)", email = "eio@hum.ku.dk" },
  { name = "Asger Balsby Kromand (University of Copenhagen)", email = "asgerkromand@gmail.com" },
  { name = "Anders Blok (University of Copenhagen)", email = "abl@ifro.ku.dk" }
]

license = "MIT"

dependencies = [
  "pandas",
  "tqdm",
  "numpy",
  "matplotlib",
  "scikit-learn",
  "ipykernel>=6.29.5",
  "pygithub>=2.6.1",
  "beautifulsoup4>=0.0.2",
  "regex>=2024.11.6",
  "openpyxl>=3.1.5",
  "dataclasses>=0.8",
  "jupyter>=1.1.1",
  "ipython>=8.12.3",
  "pyarrow>=17.0.0",
  "networkx>=3.1",
]

[tool.setuptools]
packages = ["resources"]
